cmake_minimum_required(VERSION 3.20)
project(judger)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic -O3)
endif()

#set(CMAKE_PREFIX_PATH "~/program/ros2_ws_practice_2.13/install" ${CMAKE_PREFIX_PATH})

# find dependencies
find_package(ament_cmake_auto REQUIRED)
ament_auto_find_build_dependencies()

include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(include)

ament_auto_add_executable(${PROJECT_NAME}_node test/main.cpp)
target_link_libraries(${PROJECT_NAME}_node ${PROJECT_SOURCE_DIR}/lib/libjudger.so)

ament_auto_add_executable(${PROJECT_NAME} test/Transport.cpp)


# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
    find_package(ament_lint_auto REQUIRED)
    # the following line skips the linter which checks for copyrights
    # comment the line when a copyright and license is added to all source files
    set(ament_cmake_copyright_FOUND TRUE)
    # the following line skips cpplint (only works in a git repo)
    # comment the line when this package is in a git repo and when
    # a copyright and license is added to all source files
    set(ament_cmake_cpplint_FOUND TRUE)
    ament_lint_auto_find_test_dependencies()
endif()

ament_auto_package()
